--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unsere Hochzeit</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Ablauf | Unsere Hochzeit{% endblock %}
+
+{% block content %}
+
     <h1>Willkommen zur Hochzeit!</h1>
-</body>
-</html>
+{% endblock %}
