--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Ablauf | Unsere Hochzeit{% endblock %}
+{% block title %}Georg & Rebecca{% endblock %}
 
 {% block content %}
 
