--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -41,8 +41,7 @@
     <h2>Ort der Trauung</h2>
     <p>Neues Schloss Meersburg, Schlossplatz 12, 88709 Meersburg</p>
     <div class="map-container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2685.528381942147!2d9.269701375733698!3d47.69357838196807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479af8657a60569f%3A0x2f7f0a1765ad19ff!2sNeues%20Schloss%20Meersburg!5e0!3m2!1sde!2sit!4v1744611817340!5m2!1sde!2sit" 
-            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2685.528381942147!2d9.269701375733698!3d47.69357838196807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479af8657a60569f%3A0x2f7f0a1765ad19ff!2sNeues%20Schloss%20Meersburg!5e0!3m2!1sde!2sit!4v1744611817340!5m2!1sde!2sit" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
 
@@ -51,8 +50,7 @@
     <h2>Ort Abendessen</h2>
     <p>ess|bar, Sigismundstraße 15, 78462 Konstanz</p>
     <div class="map-container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.3176687149094!2d9.172890675731503!3d47.65882488437056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479af71ddec8107b%3A0x86cb3570b6ac1720!2sess%2Fbar!5e0!3m2!1sde!2sit!4v1744611765790!5m2!1sde!2sit"
-            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.3176687149094!2d9.172890675731503!3d47.65882488437056!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479af71ddec8107b%3A0x86cb3570b6ac1720!2sess%2Fbar!5e0!3m2!1sde!2sit!4v1744611765790!5m2!1sde!2sit" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </section>
 
