--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -20,7 +20,7 @@
     <section id="begruessung" style="padding: 3rem; text-align: center;">
         <h1>Willkommen zu unserer Hochzeit 💍</h1>
         <p>Wir freuen uns riesig, diesen besonderen Tag mit euch zu feiern!</p>
-        <img src="{{ url_for('static', filename='1.jpg') }}" alt="Wir zwei" style="max-width: 100%; height: 200; border-radius: 8px;">
+        <img src="{{ url_for('static', filename='1.jpg') }}" alt="Wir zwei" style="max-width: 100%; height: auto; border-radius: 8px;">
     </section>
 
     <!-- Ablauf -->
@@ -164,9 +164,6 @@
     
         updateCarousel(); // Initial aufrufen
     </script>
-    
-    
-    
     
 </body>
 </html>
