--- a/app/static/style.css
+++ b/app/static/style.css
@@ -54,14 +54,14 @@
 
 .carousel-wrapper {
   position: relative;
-  max-width: 90%;
+  width: 100%;
   margin: auto;
   overflow: hidden;
 }
 
 .carousel-track {
   display: flex;
-  width: fit-content;
+  width: 100%;
   margin: auto;
   transition: transform 0.5s ease;
   gap: 1rem;
@@ -70,7 +70,8 @@
 }
 
 .carousel-slide {
-  width: 300px;
+  width: 100%;
+  flex-shrink: 0;
   flex: 0 0 auto; /* verhindert, dass das Bild sich streckt */
   opacity: 0.5;
   transform: scale(0.9);
