--- a/app/static/style.css
+++ b/app/static/style.css
@@ -70,7 +70,7 @@
 }
 
 .carousel-slide {
-  width: 100%;
+  width: 200px; /* Breite der Bilder */
   flex-shrink: 0;
   flex: 0 0 auto; /* verhindert, dass das Bild sich streckt */
   opacity: 0.5;
