--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -64,14 +64,14 @@
 <section id="bilder" style="padding: 2rem; background-color: #f9f9f9;">
     <h2>Bildergalerie</h2>
     <div class="carousel-wrapper">
-      <button class="carousel-btn prev">❮</button> //onclick="changeSlide(-1)""
+      <button class="carousel-btn prev">❮</button> <!--//onclick="changeSlide(-1)""-->
         <div class="carousel-track" id="carousel-track">
-            <div class="carousel-slide"><img src="{{ url_for('static', filename='2.jpg') }}" alt="Bild 1"></div>
+           <!-- <div class="carousel-slide"><img src="{{ url_for('static', filename='2.jpg') }}" alt="Bild 1"></div>-->
             <div class="carousel-slide"> <img src="{{ url_for('static', filename='3.jpg') }}" alt="Bild 2"></div>
             <div class="carousel-slide"><img src="{{ url_for('static', filename='4.jpg') }}" alt="Bild 3"></div>
             <div class="carousel-slide"><img src="{{ url_for('static', filename='2.jpg') }}" alt="Bild 1"></div>
         </div>
-      <button class="carousel-btn next">❯</button> //onclick="changeSlide(1)"
+      <button class="carousel-btn next">❯</button> <!--//onclick="changeSlide(1)"-->
     </div>
   </section>
   
